mostly atuin stuff

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,3 +40,7 @@ set -g @plugin 'xamut/tmux-spotify'
 
 run '~/.tmux/plugins/tpm/tpm'
 run '~/.tmux/plugins/catppuccin/tmux/catppuccin.tmux'
+
+# copy to system clip
+bind-key -Tcopy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+
