--- a/docker_stuff/docker_tmux.conf
+++ b/docker_stuff/docker_tmux.conf
@@ -11,7 +11,12 @@ bind l last-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'o0th/tmux-nova'
+#set -g @plugin 'o0th/tmux-nova'
+
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
+
+
 run '~/.tmux/plugins/tpm/tpm'
 
 set-window-option -g mode-keys vi
